workspace/log/build_2024-12-02_12-30-39/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:69:56: error: no match for ‘operator=’ (operand types are ‘MultiDroneControl::MultiDroneControl()::Coordinates’ and ‘std::vector<MultiDroneControl::Coordinates>’)
   69 |         droneCoords = get_position(drone_namespaces_[1]);
      |                                                        ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:54:16: note: candidate: ‘constexpr MultiDroneControl::MultiDroneControl()::Coordinates& MultiDroneControl::MultiDroneControl()::Coordinates::operator=(const MultiDroneControl::MultiDroneControl()::Coordinates&)’
   54 |         struct Coordinates {
      |                ^~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:54:16: note:   no known conversion for argument 1 from ‘std::vector<MultiDroneControl::Coordinates>’ to ‘const MultiDroneControl::MultiDroneControl()::Coordinates&’
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:54:16: note: candidate: ‘constexpr MultiDroneControl::MultiDroneControl()::Coordinates& MultiDroneControl::MultiDroneControl()::Coordinates::operator=(MultiDroneControl::MultiDroneControl()::Coordinates&&)’
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:54:16: note:   no known conversion for argument 1 from ‘std::vector<MultiDroneControl::Coordinates>’ to ‘MultiDroneControl::MultiDroneControl()::Coordinates&&’
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘std::vector<MultiDroneControl::Coordinates> MultiDroneControl::get_position(const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:96:62: warning: unused parameter ‘ns’ [-Wunused-parameter]
   96 |     std::vector<Coordinates> get_position(const std::string &ns)
      |                                           ~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
